almost final refactoring